# HW_MLOps_ITMO_2025

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  airflow.env  docker-compose-airflow.yaml  docker-compose-api.yml  dvc.yaml  main.py  models.dvc  prometheus.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
airflow/: README.md
airflow/dags/: ml_pipeline_dag.py
api/: config-catboost.json  config-lgbm.json  config-rf.json  main.py
buildfiles/: Dockerfile  airflow.Dockerfile  api.Dockerfile  dvc-init.Dockerfile
data/: .gitignore  embeddings.dvc  processed.dvc  raw.dvc
metrics/: .gitignore
research_artifacts/: DVC_DNA_dataset_processing.ipynb  DVC_embeddings_processing.ipynb  DVC_eval_2_different_models.ipynb  DVC_eval_models.ipynb  DVC_train_2_different_models.ipynb  DVC_train_models.ipynb  MLflow_model_comparison.ipynb
scripts/: benchmark_detailed_results.json  benchmark_models.py
src/: dataset.py  embeddings.py  evaluate.py  model.py  process.py  train.py
two_diff_models/: .gitignore  catboost_v1.dvc  catboost_v2.dvc
