[project]
name = "hw-mlops-itmo-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"] 

[tool.isort]
profile = "black"  
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff.lint]
fixable = ["ALL"] 

[project.optional-dependencies]
dev = ["ruff", "isort"]