[project]
name = "hw-mlops-itmo-2025"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "dvc[s3]>=3.50.0",
    "ipykernel>=6.29.5",
    "xgboost>=3.0.0",
    "lightgbm>=4.6.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"] 

[tool.isort]
profile = "black"  
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.ruff.lint]
fixable = ["ALL"] 

[project.optional-dependencies]
dev = ["ruff", "isort"]
