[project]
name = "hw-mlops-itmo-2025"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "dvc[s3]>=3.50.0",
    "apache-airflow>=2.8.0",
    "pyyaml>=6.0",
    "lightgbm==4.6.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"] 
fixable = ["ALL"]

[tool.isort]
profile = "black"  
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[project.optional-dependencies]
dev = ["ruff", "isort", "pre-commit"]
